[tool.poetry]
name = "clibra"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.scripts]
clibra = "clibra.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
rich = "^13.7.1"
pandas = "^2.2.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
